manifests/04.INGRESSROUTE/004.hypercloud-ingressroute.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: hypercloud-stripprefix
  namespace: api-gateway-system
spec:
  stripPrefix:
    prefixes:
      - "/api/hypercloud"
      - "/api/multi-hypercloud"
      - "/api/webhook"
    # forceSlash: true
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: hypercloud-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
  - websecure
#  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/api/hypercloud`, `/api/multi-hypercloud`,`/api/webhook`) && Host(`console.@@DNS@@`)
    priority: 100    
    middlewares:
    - name: jwt-decode-auth@file
    - name: hypercloud-stripprefix
      namespace: api-gateway-system
    services:
    - kind: Service
      name: hypercloud5-api-server-service
      namespace: hypercloud5-system
      port: https
      scheme: https
      serversTransport: hypercloud-transport
  tls: {} # use default tls
