manifests/04.INGRESSROUTE/006.kubectl-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: tmax-cloud
    app.kubernetes.io/name: api-gateway
  name: k8s-ingressroute
  namespace: api-gateway-system
spec:
  entryPoints:
  - k8s
  routes:
  - kind: Rule
    match: PathPrefix(`/`) && Host(`kubernetes.@@DNS@@`)
    services:
    - name: kubernetes
      namespace: default
      port: https
      scheme: https
      serversTransport: kubernetes@file
  tls: {}
---
